--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <button class="zerar">Zerar</button>
         </p>
     </section>
+    <button id="darkModeButton"><i class="fa-solid fa-moon fa-2xl"></i></button>
 
     <script src="index.js"></script>
+    <script src="https://kit.fontawesome.com/c92820bee5.js" crossorigin="anonymous"></script>
 </body>
 </html>
